@@ -2,7 +2,7 @@
 # Autoconf/automake.
 # -------------------------------------------------------------------------------
 AC_PREREQ([2.5])
-AC_INIT([clipit], [1.3.4], [oss@web-tm.com])
+AC_INIT([clipit], [1.3.5], [oss@web-tm.com])
 AM_INIT_AUTOMAKE([AC_PACKAGE_TARNAME()], [AC_PACKAGE_VERSION()])
 
 AC_CONFIG_MACRO_DIR([m4])
@@ -27,6 +27,38 @@ AC_SUBST(clipitlocaledir)
 
 AM_GNU_GETTEXT([external])
 AM_GNU_GETTEXT_VERSION(0.18.1)
+
+# -------------------------------------------------------------------------------
+# Application indicator.
+# -------------------------------------------------------------------------------
+
+APPINDICATOR_REQUIRED_VERSION=0.2.4
+
+AC_ARG_ENABLE([appindicator],
+	AS_HELP_STRING([--enable-appindicator[=@<:@no/auto/yes@:>@]],[Build support for application indicators]),
+	[enable_appindicator=$enableval],
+	[enable_appindicator="auto"])
+
+
+if test x$enable_appindicator = xauto ; then
+	PKG_CHECK_EXISTS(appindicator-0.1 >= $APPINDICATOR_REQUIRED_VERSION,
+		[enable_appindicator="yes"],
+		[enable_appindicator="no"])
+fi
+
+if test x$enable_appindicator = xyes ; then
+	PKG_CHECK_MODULES(APPINDICATOR,
+		[appindicator-0.1 >= $APPINDICATOR_REQUIRED_VERSION],
+		[AC_DEFINE(HAVE_APPINDICATOR, 1, [Have AppIndicator])])
+fi
+
+AM_CONDITIONAL(HAVE_APPINDICATOR, test x$enable_appindicator = xyes)
+AC_SUBST(APPINDICATOR_CFLAGS)
+AC_SUBST(APPINDICATOR_LIBS)
+
+# -------------------------------------------------------------------------------
+# Config options.
+# -------------------------------------------------------------------------------
 
 AM_MAINTAINER_MODE([disable])
 
@@ -64,8 +96,8 @@ AC_C_CONST()
 AC_TYPE_SIGNAL()
 
 AC_CONFIG_FILES([Makefile m4/Makefile
-                 doc/Makefile
-                 src/Makefile
-                 data/Makefile])
+			doc/Makefile
+			src/Makefile
+			data/Makefile])
 
 AC_OUTPUT([po/Makefile.in])
